# easysoap

./: README  README.borland  buildconf.sh  configure.in  easysoap.spec  update_libs.sh  update_server.sh
CVSROOT/: cvsignore  loginfo  syncmail
conftools/: .cvsignore  ac_cxx_partial_specialization.m4  ac_cxx_typename.m4
easysoap/: .cvsignore  AUTHORS  AUTHORS.TXT  ChangeLog  Changelog  Makefile  Makefile.am  README  README.TXT  README.borland  TODO  ac_cxx_partial_specialization.m4  ac_cxx_template_keyword_qualifier.m4  buildconf.sh  configure.in  easysoap-lib.mcp  easysoap-test.mcp  easysoap.dsw  easysoap.dxy  easysoap.spec
easysoap/conftools/: .cvsignore  ac_cxx_template_keyword_qualifier.m4  peti_with_dmalloc.m4
easysoap/google/: README.txt  google.cpp  google_xs.h  main.cpp
easysoap/include/: Makefile.am  SOAP.h  SOAPArray.h  SOAPBase64.h  SOAPBody.h  SOAPCGIHandler.h  SOAPCGIServer.h  SOAPCGITransport.h  SOAPData.h  SOAPDebugger.h  SOAPDispatchHandler.h  SOAPEnvelope.h  SOAPException.h  SOAPFault.h  SOAPHTTPServer.h  SOAPHashMap.h  SOAPHeader.h  SOAPISAPIServer.h  SOAPMethod.h  SOAPNamespaces.h  SOAPPacketWriter.h  SOAPParameter.h  SOAPParse.h  SOAPParseEventHandler.h  SOAPPool.h  SOAPProxy.h  SOAPQName.h  SOAPResponse.h  SOAPSTL.h  SOAPServer.h  SOAPServerDispatch.h  SOAPSocket.h  SOAPStack.h  SOAPString.h  SOAPTransport.h  SOAPTypeTraits.h  SOAPTypes.h  SOAPUrl.h  SOAPUtil.h  SOAPonHTTP.h  (+5 more)
easysoap/include/config/: MetrowerksPrecomp.pch  MetrowerksPrecompTest.pch  es_msvc.h  es_mwerks.h
easysoap/include/easysoap/: Makefile.am  SOAP.h  SOAPArray.h  SOAPBase64.h  SOAPBody.h  SOAPCGIServer.h  SOAPCGITransport.h  SOAPDebugger.h  SOAPDispatchHandler.h  SOAPEnvelope.h  SOAPException.h  SOAPFault.h  SOAPHTTPServer.h  SOAPHashMap.h  SOAPHeader.h  SOAPISAPIServer.h  SOAPMethod.h  SOAPNamespaces.h  SOAPPacketWriter.h  SOAPParameter.h  SOAPParse.h  SOAPParseEventHandler.h  SOAPPool.h  SOAPProxy.h  SOAPQName.h  SOAPResponse.h  SOAPSSLContext.h  SOAPSTL.h  SOAPServer.h  SOAPServerDispatch.h  SOAPSocket.h  SOAPStack.h  SOAPString.h  SOAPTransport.h  SOAPTypeTraits.h  SOAPUrl.h  SOAPUtil.h  SOAPWinInetTransport.h  SOAPonHTTP.h  XMLComposer.h  (+7 more)
easysoap/proj/win32/: Makefile.am
easysoap/proj/win32/BCB5/: easysoap.bpf  easysoap.bpg  easysoap.bpr  easysoap.mak  interopclient.bpf  interopclient.bpr  interopclient.mak  interopserver.bpf  interopserver.bpr  makefile.mak  setup.bat  simpleclient.bpr  simpleclient.mak  simpleisapi.bpf  simpleisapi.bpr  simpleisapi.mak  simpleserver.bpr  validator.bpr  validator.mak
easysoap/proj/win32/MSVC6/: Makefile.am  all.dsp  easysoap.dsp  easysoap.dsw  google.dsp  interopclient.dsp  simpleclient.dsp  simpleserver.dsp  validator.dsp
easysoap/proj/win32/MSVC7/: .cvsignore  Makefile.am  easysoap.sln  easysoap.vcproj  google.vcproj  interopclient.vcproj  interopserver.vcproj  simpleclient.vcproj  simpleisapi.vcproj  validator.vcproj
easysoap/proj/win32/MSVC7.1/: easysoap.sln  interopclient.vcproj  interopserver.vcproj  simpleserver.vcproj
easysoap/proj/win32/MSVC8.0/: easysoap.sln  easysoap.vcproj  interopclient.vcproj  interopserver.vcproj  simpleclient.vcproj  simpleisapi.vcproj  validator.vcproj
easysoap/simpleserver/: Makefile  Makefile.am  README.TXT  calchandler.h  isapi.cpp  simplecgi.cpp  simplecgi.dsp  simpleclient.cpp  simpleclient.dsp  simpleisapi.cpp  simpleisapi.dsp  simpleserver.cpp  simpleserver.dsp
easysoap/src/: Makefile  Makefile.am  SOAPArrayHandler.cpp  SOAPArrayHandler.h  SOAPBase64.cpp  SOAPBody.cpp  SOAPBodyHandler.cpp  SOAPBodyHandler.h  SOAPCGIServer.cpp  SOAPCGITransport.cpp  SOAPClientSocketImp.cpp  SOAPClientSocketImp.h  SOAPData.cpp  SOAPDebugger.cpp  SOAPEnvelope.cpp  SOAPEnvelopeHandler.cpp  SOAPEnvelopeHandler.h  SOAPFault.cpp  SOAPFaultHandler.cpp  SOAPFaultHandler.h  SOAPHTTPServer.cpp  SOAPHeader.cpp  SOAPHeaderHandler.cpp  SOAPHeaderHandler.h  SOAPISAPIServer.cpp  SOAPMethod.cpp  SOAPMethodHandler.cpp  SOAPMethodHandler.h  SOAPNamespaces.cpp  SOAPPacketWriter.cpp  SOAPParameter.cpp  SOAPParameterHandler.cpp  SOAPParameterHandler.h  SOAPParse.cpp  SOAPProxy.cpp  SOAPQName.cpp  SOAPQName.h  SOAPResponse.cpp  SOAPResponseHandler.cpp  SOAPResponseHandler.h  (+24 more)
easysoap/src/abyss/src/: Abyss.dsp  Abyss.dsw  Makefile.am  abyss.h  conf.c  conn.c  data.c  file.c  server.c  socket.c  thread.c
easysoap/tests/: .cvsignore  Makefile  Makefile.am  Makefile.in  README.SSL  README.TXT  SOAPBuildersHeaderHandler.h  SOAPBuildersInteropHandler.cpp  SOAPBuildersInteropHandler.h  SOAPBuildersInteropHandlerB.cpp  SSLClient.cpp  SSLServer.cpp  interop.xsl  interopclient.cpp  interopclient.dsp  interopserver.cpp  interopserver.dsp  interopstruct.h  tests.cpp  tests.dsp
easysoap/validator/: Makefile  Makefile.am  UserlandValidatorHandler.cpp  UserlandValidatorHandler.h  WhichToolkitHandler.cpp  WhichToolkitHandler.h  validator.cpp  validator.dsp
google/: Makefile.am
include/easysoap/: .cvsignore  SOAP.h  SOAPArray.h  SOAPBase64.h  SOAPCGIServer.h  SOAPHashMap.h  SOAPHeader.h  SOAPISAPIServer.h  SOAPParameter.h  SOAPParse.h  SOAPParseEventHandler.h  SOAPPool.h  SOAPServer.h  SOAPUtil.h  XMLComposer.h  XMLParser.h  es_msvc.h
proj/win32/BCB5/: easysoap.bpf  easysoap.bpr  easysoap.mak  interopserver.mak  simpleclient.bpf  simpleserver.bpf  simpleserver.bpr  simpleserver.mak  validator.bpf  validator.bpr
proj/win32/MSVC6/: google.dsp  interopserver.dsp  simpleclient.dsp  simpleisapi.dsp
src/: SOAPBase64.cpp  SOAPBodyHandler.cpp  SOAPBodyHandler.h  SOAPDebugger.cpp  SOAPEnvelopeHandler.h  SOAPFault.cpp  SOAPHTTPServer.cpp  SOAPHeader.cpp  SOAPHeaderHandler.h  SOAPISAPIServer.cpp  SOAPMethod.cpp  SOAPParameterHandler.h  SOAPParse.cpp  SOAPResponse.cpp  SOAPSecureSocketImp.h  SOAPSocket.cpp  SOAPStructHandler.cpp  SOAPStructHandler.h  SOAPWinInetTransport.cpp  SOAPonHTTP.cpp  XMLParser.cpp  md5.h  mddriver.c
tests/: Makefile.am  SOAPBuildersHeaderHandler.cpp  SOAPBuildersHeaderHandler.h  SOAPBuildersInteropHandler.h  interopclient.cpp  interopserver.cpp
validator/: Makefile.am  WhichToolkitHandler.h  validator.cpp
(+10 files in other folders)
