dnl Process this file with autoconf to produce a configure script.
AC_INIT(include/SOAP.h)
AM_INIT_AUTOMAKE(EasySoap++, 0.3.1)
AM_CONFIG_HEADER(include/es_config.h)
AC_CANONICAL_HOST

AC_CYGWIN

dnl Checks for programs.
AC_PROG_CXX
AC_PROG_AWK
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AM_PROG_LIBTOOL
AC_PATH_PROG(MAKEDEPEND, makedepend, $TRUE)

dnl Checks for libraries.
AC_CHECK_LIB(expat, XML_Parse)
AC_CHECK_LIB(ssl, SSL_connect)
AC_CHECK_LIB(crypto, des_crypt)
AC_CHECK_LIB(wsock32, WSAStartup)

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADER(wchar.h,
	AC_DEFINE(HAVE_WCHAR_H, 1, "Define if you have the <wchar.h> header file."),
	AC_EGREP_HEADER(wchar_t, stddef.h, 
		AC_DEFINE(STDDEF_HAS_WCHART, 1, "Define if wchar_t is defined in the <stddef.h> header file.")))

AC_CHECK_HEADERS(fcntl.h malloc.h sys/ioctl.h sys/types.h sys/socket.h netinet/in.h netinet/tcp.h arpa/inet.h resolv.h netdb.h unistd.h sys/unistd.h)


dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_UID_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(mktime select socket strdup strtol snprintf)

AC_OUTPUT(Makefile simpleserver/Makefile validator/Makefile tests/Makefile src/Makefile src/abyss/Makefile src/abyss/src/Makefile include/Makefile include/es_config.h)
