easysoapdir = $(prefix)/include/easysoap
easysoap_HEADERS = \
    SOAPArray.h \
    SOAPBase64.h \
    SOAPBody.h \
    SOAPCGIHandler.h \
    SOAPDebugger.h \
    SOAPDispatchHandler.h \
    SOAPEnvelope.h \
    SOAPException.h \
    SOAPFault.h \
    SOAP.h \
    SOAPHashMap.h \
    SOAPHeader.h \
    SOAPMethod.h \
    SOAPNamespaces.h \
    SOAPPacketWriter.h \
    SOAPParameter.h \
    SOAPParseEventHandler.h \
    SOAPParse.h \
    SOAPProxy.h \
    SOAPQName.h \
    SOAPResponse.h \
    SOAPServerDispatch.h \
    SOAPSocket.h \
    SOAPStack.h \
    SOAPString.h \
    SOAPTransport.h \
    SOAPUrl.h \
    SOAPUtil.h \
    XMLParser.h \
    es_comp.h \
    es_gcc.h \
    es_msvc.h \
    es_mwerks.h 
EXTRA_DIST = \
    config/MetrowerksPrecomp.pch config/MetrowerksPrecompTest.pch
